fix: corregir src en vercel.json a package.json

--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,10 @@
   "version": 2,
   "builds": [
     {
-      "src": "angular.json",
+      "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist/proyecto_final"
+        "distDir": "frontend/dist/frontend"
       }
     }
   ],
